--- a/CSS/style.css
+++ b/CSS/style.css
@@ -27,8 +27,8 @@ header nav {
 
 header nav li {
       display: inline-block;
-      margin: 0 30px;
-      font-size: 17px;
+      margin: 0 15px;
+      font-size: 16px;
       font-family: termina, helvetica;
       font-weight: bolder;
       color: white;
@@ -43,7 +43,7 @@ nav li a:hover {
 nav {
       color: #ffffff;
       position: fixed;
-      left: 470px;
+      left: 520px;
     }
 
 nav li a {
@@ -83,19 +83,19 @@ main {
 
 .logo {
           position: relative;
-          left: 490px;
+          left: 440px;
       }
 .welcome {
     max-width: 365px;
     position: relative;
-    top: 125px;
+    top: 80px;
     left: 550px;
 }
 .hero {
     position: relative;
-    max-width: 100%;
-    left: 900px;
-    bottom:190px;
+    height: 300px;
+    left: 50px;
+    bottom:180px;
 }
 
 .wrapper {
@@ -104,3 +104,54 @@ main {
   background-color: #fcb6ca;
   position:fixed;
 }
+
+.box {
+    position: relative;
+    width: 257px;
+    height: 396px;
+    border-radius: 20px;
+    background: #ffffff linear-gradient(360deg, #ffffff 22%, #fcb6ca 60%);
+    float: left;
+    filter: drop-shadow(0px 2px 2px #cd91a2);
+    margin: 20px;
+    left: 500px;
+    top: 180px;
+}
+
+.column {
+  position:relative;
+  float: left;
+  width: 33.33%;
+  padding: 5px;
+  margin 0 auto;
+}
+
+.chef, .model, .rapper {
+    position: fixed;
+    margin: -50px -6px;
+    float: right;
+    right: 6px;
+}
+
+.box-title {
+    text-align: center;
+    position: relative;
+    bottom: 65px;
+    font-family: termina, helvetica;
+    font-weight: bolder;
+    font-size: 18px;
+    text-transform: uppercase;
+    color: #ffe8dd;
+}
+
+.blink {
+    position: relative;
+    left: 240px;
+    animation: blinker 2s linear infinite;
+    }
+    @keyframes blinker {
+      50% { opacity: 0; }
+    }
+    @keyframes blin {
+      50% { opacity: 0; }
+    }
