--- a/CSS/style.css
+++ b/CSS/style.css
@@ -19,23 +19,19 @@ body {
 
 
 h1 {
-  font-size: 36px;
-  font-family: lato;
+  font: 36px lato, sans-serif;
   color: #fcb6ca;
 }
 
 p {
-  font-size: 18px;
-  font-family: lato, sans-serif;
-  font-weight: bold;
+  font: bold 18px lato, sans-serif;
   color: white;
 }
 
-.important {
-  font-family: adobe-handwriting-ernie, sans-serif;
-  font-size:28px;
+.signature {
+  font: bold 28px adobe-handwriting-ernie, sans-serif;
   color:#fcb6ca;
-  padding: 20px;
+  padding: 10px;
   float: right;
 }
 
@@ -51,8 +47,9 @@ Header Styling
 ==========================================================*/
 
 header {
-  padding: 10px;
-  background-color:#88634f;
+    padding: 10px;
+    background-color: #88634f;
+    border-bottom: 5px solid #ab846f;
 }
 
 header .container {
@@ -73,9 +70,7 @@ header nav {
 header nav li {
   display: inline-block;
   margin: 0 15px;
-  font-size: 16px;
-  font-family: termina, helvetica;
-  font-weight: bolder;
+  font: bolder 16px termina, sans-serif;
   color: white;
   text-transform:uppercase;
   text-decoration: none;
@@ -162,7 +157,7 @@ Home Page Styling
   filter: drop-shadow(0px 2px 2px #cd91a2);
   margin: 60px 20px 0px 20px;
   display: inline-block;
-  max-width: 257px;
+  bottom: 20px;
 }
 
 .box-links a {
@@ -185,48 +180,41 @@ img.trio {
   position: relative;
   bottom: 100px;
   margin-top:30px;
-  font-family: termina, helvetica;
-  font-weight: bolder;
-  font-size: 18px;
+  font: bolder 18px termina, sans-serif;
   text-transform: uppercase;
   color: #ffe8dd;
 }
 
 .jokes-container {
     text-align: center;
-    height: 1350px;
+    height: 1290px;
     padding: 0 0 600px;
     background: #88634f;
-    padding: 120px;
+    padding: 105px;
     border-top: 5px solid pink;
 }
 
 .answer {
-    font-size: 18px;
-    font-family: lato, sans-serif;
-    font-weight: bold;
+    font: bold 18px lato, sans-serif;
     color: #fcb6ca;
     padding: 40px;
 }
 
 h3.joke {
-    font-size: 27px;
-    font-family: lato;
+    font: 27px lato, sans-serif;
     color: white;
 }
 
 .source-title {
     color: white;
-    font-family: lato, sans-serif;
-    font-size: 17px;
+    font: 17px termina, sans-serif;
     padding: 0 10px;
 }
 
-h5.source {
+h4.source {
     max-width: 800px;
-    margin: 0 auto;
-    font-family: sans-serif;
-    font-size: 15px;
+    margin: 40px 429.500px 0px;
+    font: bold 15px sans-serif;
     color: pink;
     padding: 15px;
     border: 2px solid pink;
